new landing cart

--- a/about-us.html
+++ b/about-us.html
@@ -4,10 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bocaditos Chulos</title>
-  <link rel="stylesheet" href="/styles/about-us-styles.css">
-  <link rel="stylesheet" href="/styles/navbar-style.css">
-  <link rel="stylesheet" href="/styles/footer-style.css">
-  <link rel="logo" href="/img/logopaletaactualizada.png">
+  <link rel="stylesheet" href="/styles/styles.css">
 </head>
 
 <body>
@@ -22,19 +19,25 @@
        </label>
        
       <a href="/index.html" class="logo">
-        <img src="/img/logo.png" alt="logo del sitio">
+        <img src="/img/logo png .png" alt="logo del sitio">
       </a>
 
+      <div class="right-section">
       <ul class="nav-links">
-        <li><a href="/index.html">Inicio</a></li>
         <li><a href="/products.html">Productos</a></li>
-        <li><a href="/about-us.html">Sobre nosotros</a></li>
-        <li><a href="#">Preguntas frecuentes</a></li>
+        <li><a href="/about-us.html">Nosotros</a></li>
+        <li><a href="#">Contacto</a></li>
       </ul>
+      </div>
 
+      <div class="icons">
+      <a href="#" class="profile-btn">
+        <img src="/img/usericon.svg.svg" alt="icono de usuario" class="user-icon">
+      </a>
       <a href="/cart.html" class="cart-btn">
         <img src="/img/cart3.svg" alt="carrito" class="carrito">
       </a>
+      </div>
     </nav>
   </header>
 
@@ -46,7 +49,7 @@
 
     <footer>  
       <div class="logo-footer">
-      <img src="/img/logo.png" alt="logo del sitio">
+      <img src="/img/logo png .png" alt="logo del sitio">
     </div>
     <div class="first-column">
       <p>Explorar</p>
