--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <li><b>Conservá bien los snacks:</b> guardalos en frascos herméticos y en lugar fresco para mantener su textura y sabor</li>
         </ul>
          <div class="see-more-btn">
-        <a href="#" class="more-btn">Conoce más</a>
+        <a href="./about-us.html" class="more-btn">Conoce más</a>
       </div>
       </div>
       <div class="see-more-img">
