--- a/products.html
+++ b/products.html
@@ -72,7 +72,7 @@
  
   <section class="products-grid">
     <div class="product-item">
-          <a href="/products.html">
+          <a href="/product-details.html">
             <img src="./img/item-gomitas.jpg" alt="gomitas de colágeno">
             <p>Gomitas de colágeno</p>
             <span>$1500</span>
