--- a/product-details.html
+++ b/product-details.html
@@ -4,11 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bocaditos Chulos</title>
-  <link rel="stylesheet" href="/styles/product-details-styles.css">
-  <link rel="stylesheet" href="/styles/navbar-style.css">
-  <link rel="stylesheet" href="/styles/breadcrum-style.css">
-  <link rel="stylesheet" href="/styles/footer-style.css">
-  <link rel="logo" href="/img/logopaletaactualizada.png">
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 
 <body>
@@ -23,41 +19,48 @@
        </label>
        
       <a href="/index.html" class="logo">
-        <img src="/img/logo.png" alt="logo del sitio">
+        <img src="/img/logo png .png" alt="logo del sitio">
       </a>
 
+      <div class="right-section">
       <ul class="nav-links">
-        <li><a href="/index.html">Inicio</a></li>
         <li><a href="/products.html">Productos</a></li>
-        <li><a href="/about-us.html">Sobre nosotros</a></li>
-        <li><a href="#">Preguntas frecuentes</a></li>
+        <li><a href="/about-us.html">Nosotros</a></li>
+        <li><a href="#">Contacto</a></li>
       </ul>
+      </div>
 
+      <div class="icons">
+      <a href="#" class="profile-btn">
+        <img src="/img/usericon.svg.svg" alt="icono de usuario" class="user-icon">
+      </a>
       <a href="/cart.html" class="cart-btn">
         <img src="/img/cart3.svg" alt="carrito" class="carrito">
       </a>
+      </div>
     </nav>
   </header>
 
   <main>
     <div class="breadcrumb">
-      <a class="inicio-breadcrum" href="/index.html">INICIO</a>
-
-      <span class="divider">/</span>
-      <a class="productos-breadcrum" href="/products.html">PRODUCTOS</a>
-      <span class="divider">/ </span>
-      <span class="active-breadcrum">TORTA PERSONALIZADA</a>
+      <a class="inicio-breadcrum" href="/index.html">Inicio</a>
+      <span class="divider">></span>
+      <a class="productos-breadcrum" href="/products.html">Productos</a>
+      <span class="divider">></span>
+      <span class="active-breadcrum">Gomitas de colágeno</a>
     </div>
+
+    
     <div class="detail-component">
     <div class="img-container">
-      <img src="/img/torta_imagen.png" alt="imagen del producto">
+      <img src="./img/item-gomitas.jpg" alt="gomitas de colágeno para perros y gatos">
     </div>
     <div class="price-container">
-      <h1>TORTA PERSONALIZADA</h1>
-      <h2>$13.000,00</h2>
-      <label for="quantity" class="quantity-label">CANTIDAD</label>
+      <h1>Gomitas de colágeno</h1>
+      <h2>$5.000</h2>
+      <label for="quantity" class="quantity-label">Cantidad</label>
       <input id="quantity" class="quantity" type="number" value="1" name="quantity">
-      <button class="add-to-cart">AGREGAR AL CARRITO</button>
+      <a href="./cart.html" class="add-to-cart-btn">Añadir al carrito</a>
     </div>
     <div class="details">
       <p>Torta para perros tamaño pequeño ideal para festejar cualquier momento importante con tu perrito, su cumpleaños o aniversario de adopción ❤️</p>
@@ -69,7 +72,7 @@
 
     <footer>  
       <div class="logo-footer">
-      <img src="/img/logo.png" alt="logo del sitio">
+      <img src="/img/logo png .png" alt="logo del sitio">
     </div>
     <div class="first-column">
       <p>Explorar</p>
