add new product using js

--- a/product-details.html
+++ b/product-details.html
@@ -54,18 +54,28 @@
     <div class="detail-component">
     <div class="img-container">
       <img src="./img/item-gomitas.jpg" alt="gomitas de colágeno para perros y gatos">
+      <p class="product-description">
+        Cuidá la salud de tu perro con nuestras gomitas de colágeno en paquete de 300g. Una opción deliciosa y nutritiva para fortalecer sus articulaciones, piel y pelaje.
+      </p>
     </div>
     <div class="price-container">
       <h1>Gomitas de colágeno</h1>
       <h2>$5.000</h2>
+
+      <div class="box-payment">
+        <p>Tenés 5% OFF pagando con transferencia bancaria.</p>
+        <p>Ver cuotas y descuentos en medios de pago</p>
+      </div>
+
       <label for="quantity" class="quantity-label">Cantidad</label>
       <input id="quantity" class="quantity" type="number" value="1" name="quantity">
       <a href="./cart.html" class="add-to-cart-btn">Añadir al carrito</a>
-    </div>
-    <div class="details">
-      <p>Torta para perros tamaño pequeño ideal para festejar cualquier momento importante con tu perrito, su cumpleaños o aniversario de adopción ❤️</p>
-      <p>Torta para perros elaborada a base de pollo, zanahoria y crema de papa.</p>
-      <p>Especificar fecha de entrega y nombre del perrito en "COMENTARIOS ADICIONALES". *Producción a pedido.</p>
+
+      <ul class="details-list">
+        <li>✔ Articulaciones fuertes: Favorecen la movilidad y reducen el desgaste articular.</li>
+        <li>✔ Piel sana y pelaje brillante: Mejoran la hidratación y fortalecen el pelo.</li>
+        <li>✔ Fáciles de digerir: Formuladas para cuidar su sistema digestivo.</li>
+      </ul>
     </div>
   </div>
   </main>
