--- a/products.html
+++ b/products.html
@@ -72,12 +72,14 @@
  
   <section class="products-grid">
     <div class="product-item">
-          <a href="/product-details.html">
-            <img src="./img/item-gomitas.jpg" alt="gomitas de colágeno">
-            <p>Gomitas de colágeno</p>
-            <span>$1500</span>
-            </a>
-        </div>
+        <a href="/product-details.html">
+          <div class="product-details">
+              <img src="./img/item-gomitas.jpg" alt="gomitas de colágeno">
+              <p>Gomitas de colágeno</p>
+              <span>$1500</span>
+          </div>
+        </a>
+    </div>
         <div class="product-item">
           <a href="/products.html">
             <img src="./img/item-muffins.jpg" alt="gomitas de colágeno">
@@ -127,7 +129,7 @@
             <span>$1500</span>
             </a>
         </div>
-      </div>
+  
   </section>
 
   </main>
@@ -151,5 +153,6 @@
     </div>
 </footer>
 
+<script src="/app.js"> </script>
 </body>
 </html>
