--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-widht, initial-scale=1.0">
   <title>Bocaditos Chulos</title>
   <link rel="icon" type="/img/logo.png" href="/images/favicon.ico">
-  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="../styles/styles.css">
 </head>
 
 <body>
