--- a/cart.html
+++ b/cart.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-widht, initial-scale=1.0">
   <title>Bocaditos Chulos</title>
   <link rel="icon" type="/img/logo.png" href="/images/favicon.ico">
-  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
 <body>
@@ -62,7 +62,7 @@
             <tr class="cart-item">
               <td scope="row" role="rowheader" class="product-name" data-title="Producto">
                 <div class="product-info">
-                <img src="/img/item-gomitas.jpg" alt="gomitas de colágeno para perros y gatos">
+                <img src="./img/item-gomitas.jpg" alt="gomitas de colágeno para perros y gatos">
                 <div class="product-details">
                 <a href="product-details.html">Gomitas de colágeno</a>
                 <button class="btn-empty">Eliminar</button>  
@@ -95,7 +95,7 @@
 
   <footer>  
     <div class="logo-footer">
-      <img src="/img/logo png .png" alt="logo del sitio">
+      <img src="./img/logo png .png" alt="logo del sitio">
     </div>
     <div class="first-column">
       <p>Explorar</p>
