--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <main>
       <section class="hero">
         <div class="hero-img">
-          <img src="/img/img-hero.jpg" alt="perro saludable">
+          <img src="./img/img-hero.jpg" alt="perro saludable">
         </div>
         <div class="hero-text">
           <h1>Pastelería con alma animal</h1>
@@ -146,7 +146,7 @@
       </div>
       </div>
       <div class="see-more-img">
-      <img src="img/perro-snacks.jpg">
+      <img src=".img/perro-snacks.jpg">
     </div>
     </div>
     
@@ -157,7 +157,7 @@
 
 <footer>  
     <div class="logo-footer">
-      <img src="/img/logo png .png" alt="logo del sitio">
+      <img src="./img/logo png .png" alt="logo del sitio">
     </div>
     <div class="first-column">
       <p>Explorar</p>
