--- a/product-details.html
+++ b/product-details.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bocaditos Chulos</title>
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
        </label>
        
       <a href="/index.html" class="logo">
-        <img src="/img/logo png .png" alt="logo del sitio">
+        <img src="./img/logo png .png" alt="logo del sitio">
       </a>
 
       <div class="right-section">
@@ -82,7 +82,7 @@
 
     <footer>  
       <div class="logo-footer">
-      <img src="/img/logo png .png" alt="logo del sitio">
+      <img src="./img/logo png .png" alt="logo del sitio">
     </div>
     <div class="first-column">
       <p>Explorar</p>
