--- a/products.html
+++ b/products.html
@@ -136,7 +136,7 @@
 
   <footer>  
     <div class="logo-footer">
-      <img src="/img/logo png .png" alt="logo del sitio">
+      <img src="./img/logo png .png" alt="logo del sitio">
     </div>
     <div class="first-column">
       <p>Explorar</p>
