--- a/checkout.html
+++ b/checkout.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bocaditos Chulos</title>
-  <link rel="stylesheet" href="/styles/products-styles.css">
-  <link rel="logo" href="/img/logopaletaactualizada.png">
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -15,12 +14,12 @@
 
       <input type="checkbox" id="menu-toggle" class="menu-toggle">
        <label for="menu-toggle" class="menu-btn">
-        <img src="/img/list.svg" alt="abrir menú" class="open-menu">
-        <img src="/img/x.svg" alt="cerrar menú" class="close-menu">
+        <img src="img/list.svg" alt="abrir menú" class="open-menu">
+        <img src="img/x.svg" alt="cerrar menú" class="close-menu">
        </label>
        
       <a href="/index.html" class="logo">
-        <img src="/img/logo.png" alt="logo del sitio">
+        <img src="img/logo png .png" alt="logo del sitio">
       </a>
 
       <ul class="nav-links">
@@ -29,7 +28,7 @@
         <li><a href="/about-us.html">Sobre nosotros</a></li>
         <li><a href="#">Preguntas frecuentes</a></li>
         <li><a href="/cart.html" class="cart-btn">
-          <img src="/img/cart3.svg" alt="carrito" class="carrito"></a>
+          <img src="img/cart3.svg" alt="carrito" class="carrito"></a>
         </li>
       </ul>
     </nav>
