--- a/cart.html
+++ b/cart.html
@@ -15,12 +15,12 @@
 
       <input type="checkbox" id="menu-toggle" class="menu-toggle">
        <label for="menu-toggle" class="menu-btn">
-        <img src="/img/list.svg" alt="abrir menú" class="open-menu">
-        <img src="/img/x.svg" alt="cerrar menú" class="close-menu">
+        <img src="img/list.svg" alt="abrir menú" class="open-menu">
+        <img src="img/x.svg" alt="cerrar menú" class="close-menu">
        </label>
        
       <a href="/index.html" class="logo">
-        <img src="/img/logo png .png" alt="logo del sitio">
+        <img src="img/logo png .png" alt="logo del sitio">
       </a>
 
       <div class="right-section">
@@ -33,10 +33,10 @@
 
       <div class="icons">
       <a href="#" class="profile-btn">
-        <img src="/img/usericon.svg.svg" alt="icono de usuario" class="user-icon">
+        <img src="img/usericon.svg.svg" alt="icono de usuario" class="user-icon">
       </a>
       <a href="/cart.html" class="cart-btn">
-        <img src="/img/cart3.svg" alt="carrito" class="carrito">
+        <img src="img/cart3.svg" alt="carrito" class="carrito">
       </a>
       </div>
     </nav>
@@ -62,7 +62,7 @@
             <tr class="cart-item">
               <td scope="row" role="rowheader" class="product-name" data-title="Producto">
                 <div class="product-info">
-                <img src="./img/item-gomitas.jpg" alt="gomitas de colágeno para perros y gatos">
+                <img src="img/item-gomitas.jpg" alt="gomitas de colágeno para perros y gatos">
                 <div class="product-details">
                 <a href="product-details.html">Gomitas de colágeno</a>
                 <button class="btn-empty">Eliminar</button>  
@@ -95,7 +95,7 @@
 
   <footer>  
     <div class="logo-footer">
-      <img src="./img/logo png .png" alt="logo del sitio">
+      <img src="img/logo png .png" alt="logo del sitio">
     </div>
     <div class="first-column">
       <p>Explorar</p>
