--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-widht, initial-scale=1.0">
   <title>Bocaditos Chulos</title>
-  <link rel="icon" type="/img/logo.png" href="/images/favicon.ico">
+  <link rel="icon" type="img/logo.png" href="/images/favicon.ico">
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -15,12 +15,12 @@
 
       <input type="checkbox" id="menu-toggle" class="menu-toggle">
        <label for="menu-toggle" class="menu-btn">
-        <img src="/img/list.svg" alt="abrir menú" class="open-menu">
-        <img src="/img/x.svg" alt="cerrar menú" class="close-menu">
+        <img src="img/list.svg" alt="abrir menú" class="open-menu">
+        <img src="img/x.svg" alt="cerrar menú" class="close-menu">
        </label>
        
       <a href="/index.html" class="logo">
-        <img src="/img/logo png .png" alt="logo del sitio">
+        <img src="img/logo png .png" alt="logo del sitio">
       </a>
 
       <div class="right-section">
@@ -33,10 +33,10 @@
 
       <div class="icons">
       <a href="#" class="profile-btn">
-        <img src="/img/usericon.svg.svg" alt="icono de usuario" class="user-icon">
+        <img src="img/usericon.svg.svg" alt="icono de usuario" class="user-icon">
       </a>
       <a href="/cart.html" class="cart-btn">
-        <img src="/img/cart3.svg" alt="carrito" class="carrito">
+        <img src="img/cart3.svg" alt="carrito" class="carrito">
       </a>
       </div>
     </nav>
@@ -76,56 +76,56 @@
       <div class="products-container" id="products-container">
         <div class="product-item">
           <a href="/products.html">
-            <img src="./img/item-gomitas.jpg" alt="gomitas de colágeno">
+            <img src="img/item-gomitas.jpg" alt="gomitas de colágeno">
             <p>Gomitas de colágeno</p>
             <span>$1500</span>
             </a>
         </div>
         <div class="product-item">
           <a href="/products.html">
-            <img src="./img/item-muffins.jpg" alt="gomitas de colágeno">
+            <img src="img/item-muffins.jpg" alt="gomitas de colágeno">
             <p>Muffins de banana y pollo </p>
             <span>$1500</span>
             </a>
         </div>
         <div class="product-item">
           <a href="/products.html">
-            <img src="./img/item-snacksaliento.jpg" alt="gomitas de colágeno">
+            <img src="img/item-snacksaliento.jpg" alt="gomitas de colágeno">
             <p>Snacks mal aliento</p>
             <span>$1500</span>
             </a>
         </div>
         <div class="product-item">
           <a href="/products.html">
-            <img src="./img/item-snacksgatos.jpg" alt="gomitas de colágeno">
+            <img src="img/item-snacksgatos.jpg" alt="gomitas de colágeno">
             <p>Snacks para gatos</p>
             <span>$1500</span>
             </a>
         </div>
         <div class="product-item">
           <a href="/products.html">
-            <img src="./img/item-tortahuesoXL.jpg" alt="gomitas de colágeno">
+            <img src="img/item-tortahuesoXL.jpg" alt="gomitas de colágeno">
             <p>Torta hueso XL</p>
             <span>$1500</span>
             </a>
         </div>
         <div class="product-item">
           <a href="/products.html">
-            <img src="./img/item-tortagatos.jpg" alt="gomitas de colágeno">
+            <img src="img/item-tortagatos.jpg" alt="gomitas de colágeno">
             <p>Torta mini para gatos</p>
             <span>$1500</span>
             </a>
         </div>
         <div class="product-item">
           <a href="/products.html">
-            <img src="./img/item-sticks.jpg" alt="gomitas de colágeno">
+            <img src="img/item-sticks.jpg" alt="gomitas de colágeno">
             <p>Sticks anti-sarro</p>
             <span>$1500</span>
             </a>
         </div>
         <div class="product-item">
           <a href="/products.html">
-            <img src="./img/item-helados.jpg" alt="gomitas de colágeno">
+            <img src="img/item-helados.jpg" alt="gomitas de colágeno">
             <p>Helados</p>
             <span>$1500</span>
             </a>
@@ -146,7 +146,7 @@
       </div>
       </div>
       <div class="see-more-img">
-      <img src=".img/perro-snacks.jpg">
+      <img src="img/perro-snacks.jpg">
     </div>
     </div>
     
@@ -157,7 +157,7 @@
 
 <footer>  
     <div class="logo-footer">
-      <img src="./img/logo png .png" alt="logo del sitio">
+      <img src="img/logo png .png" alt="logo del sitio">
     </div>
     <div class="first-column">
       <p>Explorar</p>
