--- a/product-details.html
+++ b/product-details.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bocaditos Chulos</title>
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -14,12 +14,12 @@
 
       <input type="checkbox" id="menu-toggle" class="menu-toggle">
        <label for="menu-toggle" class="menu-btn">
-        <img src="/img/list.svg" alt="abrir menú" class="open-menu">
-        <img src="/img/x.svg" alt="cerrar menú" class="close-menu">
+        <img src="img/list.svg" alt="abrir menú" class="open-menu">
+        <img src="img/x.svg" alt="cerrar menú" class="close-menu">
        </label>
        
       <a href="/index.html" class="logo">
-        <img src="./img/logo png .png" alt="logo del sitio">
+        <img src="img/logo png .png" alt="logo del sitio">
       </a>
 
       <div class="right-section">
@@ -32,10 +32,10 @@
 
       <div class="icons">
       <a href="#" class="profile-btn">
-        <img src="/img/usericon.svg.svg" alt="icono de usuario" class="user-icon">
+        <img src="img/usericon.svg.svg" alt="icono de usuario" class="user-icon">
       </a>
       <a href="/cart.html" class="cart-btn">
-        <img src="/img/cart3.svg" alt="carrito" class="carrito">
+        <img src="img/cart3.svg" alt="carrito" class="carrito">
       </a>
       </div>
     </nav>
@@ -53,7 +53,7 @@
     
     <div class="detail-component">
     <div class="img-container">
-      <img src="./img/item-gomitas.jpg" alt="gomitas de colágeno para perros y gatos">
+      <img src="img/item-gomitas.jpg" alt="gomitas de colágeno para perros y gatos">
       <p class="product-description">
         Cuidá la salud de tu perro con nuestras gomitas de colágeno en paquete de 300g. Una opción deliciosa y nutritiva para fortalecer sus articulaciones, piel y pelaje.
       </p>
@@ -82,7 +82,7 @@
 
     <footer>  
       <div class="logo-footer">
-      <img src="./img/logo png .png" alt="logo del sitio">
+      <img src="img/logo png .png" alt="logo del sitio">
     </div>
     <div class="first-column">
       <p>Explorar</p>
