--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bocaditos Chulos</title>
-  <link rel="stylesheet" href="./styles/styles.css">
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -14,12 +14,12 @@
 
       <input type="checkbox" id="menu-toggle" class="menu-toggle">
        <label for="menu-toggle" class="menu-btn">
-        <img src="/img/list.svg" alt="abrir menú" class="open-menu">
-        <img src="/img/x.svg" alt="cerrar menú" class="close-menu">
+        <img src="img/list.svg" alt="abrir menú" class="open-menu">
+        <img src="img/x.svg" alt="cerrar menú" class="close-menu">
        </label>
        
       <a href="/index.html" class="logo">
-        <img src="/img/logo png .png" alt="logo del sitio">
+        <img src="img/logo png .png" alt="logo del sitio">
       </a>
 
       <div class="right-section">
@@ -32,10 +32,10 @@
 
       <div class="icons">
       <a href="#" class="profile-btn">
-        <img src="/img/usericon.svg.svg" alt="icono de usuario" class="user-icon">
+        <img src="img/usericon.svg.svg" alt="icono de usuario" class="user-icon">
       </a>
       <a href="/cart.html" class="cart-btn">
-        <img src="/img/cart3.svg" alt="carrito" class="carrito">
+        <img src="img/cart3.svg" alt="carrito" class="carrito">
       </a>
       </div>
     </nav>
@@ -74,7 +74,7 @@
     <div class="product-item">
         <a href="/product-details.html">
           <div class="product-details">
-              <img src="./img/item-gomitas.jpg" alt="gomitas de colágeno">
+              <img src="img/item-gomitas.jpg" alt="gomitas de colágeno">
               <p>Gomitas de colágeno</p>
               <span>$1500</span>
           </div>
@@ -82,49 +82,49 @@
     </div>
         <div class="product-item">
           <a href="/products.html">
-            <img src="./img/item-muffins.jpg" alt="gomitas de colágeno">
+            <img src="img/item-muffins.jpg" alt="gomitas de colágeno">
             <p>Muffins de banana y pollo </p>
             <span>$1500</span>
             </a>
         </div>
         <div class="product-item">
           <a href="/products.html">
-            <img src="./img/item-snacksaliento.jpg" alt="gomitas de colágeno">
+            <img src="img/item-snacksaliento.jpg" alt="gomitas de colágeno">
             <p>Snacks mal aliento</p>
             <span>$1500</span>
             </a>
         </div>
         <div class="product-item">
           <a href="/products.html">
-            <img src="./img/item-snacksgatos.jpg" alt="gomitas de colágeno">
+            <img src="img/item-snacksgatos.jpg" alt="gomitas de colágeno">
             <p>Snacks para gatos</p>
             <span>$1500</span>
             </a>
         </div>
         <div class="product-item">
           <a href="/products.html">
-            <img src="./img/item-tortahuesoXL.jpg" alt="gomitas de colágeno">
+            <img src="img/item-tortahuesoXL.jpg" alt="gomitas de colágeno">
             <p>Torta hueso XL</p>
             <span>$1500</span>
             </a>
         </div>
         <div class="product-item">
           <a href="/products.html">
-            <img src="./img/item-tortagatos.jpg" alt="gomitas de colágeno">
+            <img src="img/item-tortagatos.jpg" alt="gomitas de colágeno">
             <p>Torta mini para gatos</p>
             <span>$1500</span>
             </a>
         </div>
         <div class="product-item">
           <a href="/products.html">
-            <img src="./img/item-sticks.jpg" alt="gomitas de colágeno">
+            <img src="img/item-sticks.jpg" alt="gomitas de colágeno">
             <p>Sticks anti-sarro</p>
             <span>$1500</span>
             </a>
         </div>
         <div class="product-item">
           <a href="/products.html">
-            <img src="./img/item-helados.jpg" alt="gomitas de colágeno">
+            <img src="img/item-helados.jpg" alt="gomitas de colágeno">
             <p>Helados</p>
             <span>$1500</span>
             </a>
