landing contact and cart-auth

--- a/cart.html
+++ b/cart.html
@@ -20,7 +20,7 @@
        </label>
        
       <a href="/index.html" class="logo">
-        <img src="img/logo png .png" alt="logo del sitio">
+        <img src="img/logo.png" alt="logo del sitio">
       </a>
 
       <div class="right-section">
@@ -33,7 +33,7 @@
 
       <div class="icons">
       <a href="#" class="profile-btn">
-        <img src="img/usericon.svg.svg" alt="icono de usuario" class="user-icon">
+        <img src="img/usericon.svg" alt="icono de usuario" class="user-icon">
       </a>
       <a href="/cart.html" class="cart-btn">
         <img src="img/cart3.svg" alt="carrito" class="carrito">
@@ -84,7 +84,10 @@
         <div class="cart-summary">
           <p><b>Subtotal <span>$14.000</span></b></p>
           <p class="shipping-note">El costo de envío se calculará más adelante</p>
-          <button class="checkout-btn">Iniciar compra</button>
+          <button class="checkout-btn">
+            <a href="cart-auth.html">Iniciar compra</a>
+          </button>
+          
         </div>
     </section>
 
@@ -95,7 +98,7 @@
 
   <footer>  
     <div class="logo-footer">
-      <img src="img/logo png .png" alt="logo del sitio">
+      <img src="img/logo.png" alt="logo del sitio">
     </div>
     <div class="first-column">
       <p>Explorar</p>
