--- a/products.html
+++ b/products.html
@@ -26,7 +26,7 @@
       <ul class="nav-links">
         <li><a href="/products.html">Productos</a></li>
         <li><a href="/about-us.html">Nosotros</a></li>
-        <li><a href="#">Contacto</a></li>
+        <li><a href="/contact.html">Contacto</a></li>
       </ul>
       </div>
 
@@ -71,65 +71,7 @@
 
  
   <section class="products-grid">
-    <div class="product-item">
-        <a href="/product-details.html">
-          <div class="product-details">
-              <img src="img/item-gomitas.jpg" alt="gomitas de colágeno">
-              <p>Gomitas de colágeno</p>
-              <span>$1500</span>
-          </div>
-        </a>
-    </div>
-        <div class="product-item">
-          <a href="/products.html">
-            <img src="img/item-muffins.jpg" alt="gomitas de colágeno">
-            <p>Muffins de banana y pollo </p>
-            <span>$1500</span>
-            </a>
-        </div>
-        <div class="product-item">
-          <a href="/products.html">
-            <img src="img/item-snacksaliento.jpg" alt="gomitas de colágeno">
-            <p>Snacks mal aliento</p>
-            <span>$1500</span>
-            </a>
-        </div>
-        <div class="product-item">
-          <a href="/products.html">
-            <img src="img/item-snacksgatos.jpg" alt="gomitas de colágeno">
-            <p>Snacks para gatos</p>
-            <span>$1500</span>
-            </a>
-        </div>
-        <div class="product-item">
-          <a href="/products.html">
-            <img src="img/item-tortahuesoXL.jpg" alt="gomitas de colágeno">
-            <p>Torta hueso XL</p>
-            <span>$1500</span>
-            </a>
-        </div>
-        <div class="product-item">
-          <a href="/products.html">
-            <img src="img/item-tortagatos.jpg" alt="gomitas de colágeno">
-            <p>Torta mini para gatos</p>
-            <span>$1500</span>
-            </a>
-        </div>
-        <div class="product-item">
-          <a href="/products.html">
-            <img src="img/item-sticks.jpg" alt="gomitas de colágeno">
-            <p>Sticks anti-sarro</p>
-            <span>$1500</span>
-            </a>
-        </div>
-        <div class="product-item">
-          <a href="/products.html">
-            <img src="img/item-helados.jpg" alt="gomitas de colágeno">
-            <p>Helados</p>
-            <span>$1500</span>
-            </a>
-        </div>
-  
+    <!-- Los productos se renderizan aquí mediante JavaScript -->
   </section>
 
   </main>
