--- a/product-details.html
+++ b/product-details.html
@@ -26,7 +26,7 @@
       <ul class="nav-links">
         <li><a href="/products.html">Productos</a></li>
         <li><a href="/about-us.html">Nosotros</a></li>
-        <li><a href="#">Contacto</a></li>
+        <li><a href="/contact.html">Contacto</a></li>
       </ul>
       </div>
 
