--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
 
       <div class="icons">
-      <a href="#" class="profile-btn">
+      <a href="/login.html" class="profile-btn">
         <img src="img/usericon.svg" alt="icono de usuario" class="user-icon">
       </a>
       <a href="/cart.html" class="cart-btn">
