product-details logo nav and footer

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <p>Explora nuestra colección de pasteles, snacks dulces y salados</p>
       <div class="products-container" id="products-container">
         <div class="product-item">
-          <a href="/products.html">
+          <a href="/product-details.html">
             <img src="img/item-gomitas.jpg" alt="gomitas de colágeno">
             <p>Gomitas de colágeno</p>
             <span>$1500</span>
