--- a/product-details.html
+++ b/product-details.html
@@ -19,7 +19,7 @@
        </label>
        
       <a href="/index.html" class="logo">
-        <img src="img/logo png .png" alt="logo del sitio">
+        <img src="img/logo.png" alt="logo del sitio">
       </a>
 
       <div class="right-section">
@@ -32,7 +32,7 @@
 
       <div class="icons">
       <a href="#" class="profile-btn">
-        <img src="img/usericon.svg.svg" alt="icono de usuario" class="user-icon">
+        <img src="img/usericon.svg" alt="icono de usuario" class="user-icon">
       </a>
       <a href="/cart.html" class="cart-btn">
         <img src="img/cart3.svg" alt="carrito" class="carrito">
@@ -82,7 +82,7 @@
 
     <footer>  
       <div class="logo-footer">
-      <img src="img/logo png .png" alt="logo del sitio">
+      <img src="img/logo.png" alt="logo del sitio">
     </div>
     <div class="first-column">
       <p>Explorar</p>
