fix: update links to use relative paths in navigation and product sections

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
       <div class="right-section">
       <ul class="nav-links">
-        <li><a href="/products.html">Productos</a></li>
-        <li><a href="/about-us.html">Nosotros</a></li>
-        <li><a href="/contact.html">Contacto</a></li>
+        <li><a href="products.html">Productos</a></li>
+        <li><a href="about-us.html">Nosotros</a></li>
+        <li><a href="contact.html">Contacto</a></li>
       </ul>
       </div>
 
@@ -75,7 +75,7 @@
       <p>Explora nuestra colección de pasteles, snacks dulces y salados</p>
       <div class="products-container" id="products-container">
         <div class="product-item">
-          <a href="/product-details.html">
+          <a href="product-details.html">
             <img src="img/item-gomitas.jpg" alt="gomitas de colágeno">
             <p>Gomitas de colágeno</p>
             <span>$1500</span>
@@ -142,7 +142,7 @@
           <li><b>Conservá bien los snacks:</b> guardalos en frascos herméticos y en lugar fresco para mantener su textura y sabor</li>
         </ul>
          <div class="see-more-btn">
-        <a href="./about-us.html" class="more-btn">Conoce más</a>
+        <a href="about-us.html" class="more-btn">Conoce más</a>
       </div>
       </div>
       <div class="see-more-img">
