fix: update links to use relative paths in index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="img/x.svg" alt="cerrar menú" class="close-menu">
        </label>
        
-      <a href="/index.html" class="logo">
+      <a href="index.html" class="logo">
         <img src="img/logo.png" alt="logo del sitio">
       </a>
 
@@ -32,10 +32,10 @@
       </div>
 
       <div class="icons">
-      <a href="/login.html" class="profile-btn">
+      <a href="login.html" class="profile-btn">
         <img src="img/usericon.svg" alt="icono de usuario" class="user-icon">
       </a>
-      <a href="/cart.html" class="cart-btn">
+      <a href="cart.html" class="cart-btn">
         <img src="img/cart3.svg" alt="carrito" class="carrito">
       </a>
       </div>
@@ -50,7 +50,7 @@
         <div class="hero-text">
           <h1>Pastelería con alma animal</h1>
           <p>Descubre nuestras creaciones únicas: pasteles y postres con diseños personalizados de tus mascotas, perfectos para celebraciones especiales.</p>
-          <a href="/products.html" class="btn-hero">Ver catálogo</a>
+          <a href="products.html" class="btn-hero">Ver catálogo</a>
         </div>
       </section>
 
@@ -82,49 +82,49 @@
             </a>
         </div>
         <div class="product-item">
-          <a href="/products.html">
+          <a href="products.html">
             <img src="img/item-muffins.jpg" alt="gomitas de colágeno">
             <p>Muffins de banana y pollo </p>
             <span>$1500</span>
             </a>
         </div>
         <div class="product-item">
-          <a href="/products.html">
+          <a href="products.html">
             <img src="img/item-snacksaliento.jpg" alt="gomitas de colágeno">
             <p>Snacks mal aliento</p>
             <span>$1500</span>
             </a>
         </div>
         <div class="product-item">
-          <a href="/products.html">
+          <a href="products.html">
             <img src="img/item-snacksgatos.jpg" alt="gomitas de colágeno">
             <p>Snacks para gatos</p>
             <span>$1500</span>
             </a>
         </div>
         <div class="product-item">
-          <a href="/products.html">
+          <a href="products.html">
             <img src="img/item-tortahuesoXL.jpg" alt="gomitas de colágeno">
             <p>Torta hueso XL</p>
             <span>$1500</span>
             </a>
         </div>
         <div class="product-item">
-          <a href="/products.html">
+          <a href="products.html">
             <img src="img/item-tortagatos.jpg" alt="gomitas de colágeno">
             <p>Torta mini para gatos</p>
             <span>$1500</span>
             </a>
         </div>
         <div class="product-item">
-          <a href="/products.html">
+          <a href="products.html">
             <img src="img/item-sticks.jpg" alt="gomitas de colágeno">
             <p>Sticks anti-sarro</p>
             <span>$1500</span>
             </a>
         </div>
         <div class="product-item">
-          <a href="/products.html">
+          <a href="products.html">
             <img src="img/item-helados.jpg" alt="gomitas de colágeno">
             <p>Helados</p>
             <span>$1500</span>
@@ -176,6 +176,6 @@
 
 </body>
 
-<script src="/app.js"> </script>
+<script src="app.js"> </script>
 
 </html>
