fix: update links to use relative paths in all pages

--- a/cart-auth.html
+++ b/cart-auth.html
@@ -21,23 +21,23 @@
         <img src="img/x.svg" alt="cerrar menú" class="close-menu">
        </label>
        
-      <a href="/index.html" class="logo">
+      <a href="index.html" class="logo">
         <img src="img/logo.png" alt="logo del sitio">
       </a>
 
       <div class="right-section">
       <ul class="nav-links">
-        <li><a href="/products.html">Productos</a></li>
-        <li><a href="/about-us.html">Nosotros</a></li>
-        <li><a href="#">Contacto</a></li>
+        <li><a href="products.html">Productos</a></li>
+        <li><a href="about-us.html">Nosotros</a></li>
+        <li><a href="contact.html">Contacto</a></li>
       </ul>
       </div>
 
       <div class="icons">
-      <a href="#" class="profile-btn">
+      <a href="login.html" class="profile-btn">
         <img src="img/usericon.svg" alt="icono de usuario" class="user-icon">
       </a>
-      <a href="/cart.html" class="cart-btn">
+      <a href="cart.html" class="cart-btn">
         <img src="img/cart3.svg" alt="carrito" class="carrito">
       </a>
       </div>
@@ -46,9 +46,9 @@
 
   <main>
     <div class="breadcrumb">
-      <a class="carrito" href="/cart.html">Carrito</a>
+      <a class="carrito" href="cart.html">Carrito</a>
       <span class="divider">></span>
-      <a class="active-breadcrum" href="/cart-auth.html">Detalle</a>
+      <a class="active-breadcrum" href="cart-auth.html">Detalle</a>
       <span class="divider">></span>
       <span class="envio" >Envío</a>
       <span class="divider">></span>
