--- a/cart-payment.html
+++ b/cart-payment.html
@@ -2,8 +2,9 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-widht, initial-scale=1.0">
   <title>Bocaditos Chulos</title>
+  <link rel="icon" type="/img/logo.png" href="/images/favicon.ico">
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -18,19 +19,26 @@
         <img src="img/x.svg" alt="cerrar menú" class="close-menu">
        </label>
        
-      <a href="/index.html" class="logo">
-        <img src="img/logo png .png" alt="logo del sitio">
+      <a href="index.html" class="logo">
+        <img src="img/logo.png" alt="logo del sitio">
       </a>
 
+      <div class="right-section">
       <ul class="nav-links">
-        <li><a href="/index.html">Inicio</a></li>
-        <li><a href="/products.html">Productos</a></li>
-        <li><a href="/about-us.html">Sobre nosotros</a></li>
-        <li><a href="#">Preguntas frecuentes</a></li>
-        <li><a href="/cart.html" class="cart-btn">
-          <img src="img/cart3.svg" alt="carrito" class="carrito"></a>
-        </li>
+        <li><a href="products.html">Productos</a></li>
+        <li><a href="about-us.html">Nosotros</a></li>
+        <li><a href="contact.html">Contacto</a></li>
       </ul>
+      </div>
+
+      <div class="icons">
+      <a href="login.html" class="profile-btn">
+        <img src="img/usericon.svg" alt="icono de usuario" class="user-icon">
+      </a>
+      <a href="cart.html" class="cart-btn">
+        <img src="img/cart3.svg" alt="carrito" class="carrito">
+      </a>
+      </div>
     </nav>
   </header>
 
