--- a/product-details.html
+++ b/product-details.html
@@ -18,23 +18,23 @@
         <img src="img/x.svg" alt="cerrar menú" class="close-menu">
        </label>
        
-      <a href="/index.html" class="logo">
+      <a href="index.html" class="logo">
         <img src="img/logo.png" alt="logo del sitio">
       </a>
 
       <div class="right-section">
       <ul class="nav-links">
-        <li><a href="/products.html">Productos</a></li>
-        <li><a href="/about-us.html">Nosotros</a></li>
-        <li><a href="/contact.html">Contacto</a></li>
+        <li><a href="products.html">Productos</a></li>
+        <li><a href="about-us.html">Nosotros</a></li>
+        <li><a href="contact.html">Contacto</a></li>
       </ul>
       </div>
 
       <div class="icons">
-      <a href="#" class="profile-btn">
+      <a href="login.html" class="profile-btn">
         <img src="img/usericon.svg" alt="icono de usuario" class="user-icon">
       </a>
-      <a href="/cart.html" class="cart-btn">
+      <a href="cart.html" class="cart-btn">
         <img src="img/cart3.svg" alt="carrito" class="carrito">
       </a>
       </div>
@@ -43,9 +43,9 @@
 
   <main>
     <div class="breadcrumb">
-      <a class="inicio-breadcrum" href="/index.html">Inicio</a>
+      <a class="inicio-breadcrum" href="index.html">Inicio</a>
       <span class="divider">></span>
-      <a class="productos-breadcrum" href="/products.html">Productos</a>
+      <a class="productos-breadcrum" href="products.html">Productos</a>
       <span class="divider">></span>
       <span class="active-breadcrum">Gomitas de colágeno</a>
     </div>
@@ -69,7 +69,7 @@
 
       <label for="quantity" class="quantity-label">Cantidad</label>
       <input id="quantity" class="quantity" type="number" value="1" name="quantity">
-      <a href="./cart.html" class="add-to-cart-btn">Añadir al carrito</a>
+      <a href="cart.html" class="add-to-cart-btn">Añadir al carrito</a>
 
       <ul class="details-list">
         <li>✔ Articulaciones fuertes: Favorecen la movilidad y reducen el desgaste articular.</li>
