--- a/about-us.html
+++ b/about-us.html
@@ -18,23 +18,23 @@
         <img src="img/x.svg" alt="cerrar menú" class="close-menu">
        </label>
        
-      <a href="/index.html" class="logo">
-        <img src="img/logo png .png" alt="logo del sitio">
+      <a href="index.html" class="logo">
+        <img src="img/logo.png" alt="logo del sitio">
       </a>
 
       <div class="right-section">
       <ul class="nav-links">
-        <li><a href="/products.html">Productos</a></li>
-        <li><a href="/about-us.html">Nosotros</a></li>
-        <li><a href="#">Contacto</a></li>
+        <li><a href="products.html">Productos</a></li>
+        <li><a href="about-us.html">Nosotros</a></li>
+        <li><a href="contact.html">Contacto</a></li>
       </ul>
       </div>
 
       <div class="icons">
-      <a href="#" class="profile-btn">
-        <img src="img/usericon.svg.svg" alt="icono de usuario" class="user-icon">
+      <a href="login.html" class="profile-btn">
+        <img src="img/usericon.svg" alt="icono de usuario" class="user-icon">
       </a>
-      <a href="/cart.html" class="cart-btn">
+      <a href="cart.html" class="cart-btn">
         <img src="img/cart3.svg" alt="carrito" class="carrito">
       </a>
       </div>
@@ -49,7 +49,7 @@
 
     <footer>  
       <div class="logo-footer">
-      <img src="img/logo png .png" alt="logo del sitio">
+      <img src="img/logo.png" alt="logo del sitio">
     </div>
     <div class="first-column">
       <p>Explorar</p>
